--- a/index.html
+++ b/index.html
@@ -15,6 +15,43 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!-- HEADER -->
+    <header>
+
+    </header>
+    <!-- END HEADER -->
+
+    <!-- MAIN -->
+    <main>
+
+        <!-- Start -->
+        <section>
+
+        </section>
+
+        <!-- Portfolio -->
+        <section>
+
+        </section>
+
+        <!-- About me -->
+        <section>
+
+        </section>
+
+        <!-- Contact me -->
+        <section>
+
+        </section>
+
+    </main>
+
+    <!-- FOOTER -->
+    <Footer>
+
+    </Footer>
+    <!-- END FOOTER -->
     
 </body>
 </html>
