--- a/index.html
+++ b/index.html
@@ -12,13 +12,50 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Title -->
-    <title>Document</title>
+    <title>Freelancer</title>
 </head>
 <body>
 
     <!-- HEADER -->
     <header>
+        <div class="container al">
+            <div class="row row-cols-2">
+              <div class="col">
+                <a href="#">START BOOTSTRAP</a> 
+              </div>
+              <div class="col justify-content-end">
+                <nav class="d-flex justify-content-end">
+                    <ul>
 
+                        <li class="menu-link d-none d-lg-block">
+
+                            <ul>
+
+                                <li>
+                                    <a href="#">LINK</a> 
+                                </li>
+
+                                <li>
+                                    <a href="#">LINK</a>
+                                </li>
+
+                                <li>
+                                    <a href="#">LINK</a>
+                                </li>
+
+                            </ul>
+                            
+                        </li>
+
+                        <li>
+                            <a href="#">BURGER</a> 
+                        </li>
+
+                    </ul>
+                </nav>
+              </div>
+            </div>
+          </div>
     </header>
     <!-- END HEADER -->
 
