Section Start layout complete

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                 </li>
 
                             </ul>
-                            
+
                         </li>
 
                         <li>
@@ -63,7 +63,34 @@
     <main>
 
         <!-- Start -->
-        <section>
+        <section id="start">
+            <div class="container">
+                <div class="row">
+                    <div class="col d-flex flex-column">
+
+                        <div class="start">
+                            <!-- Avatar -->
+                            <img src="img/avatar.svg" alt="avatar">
+
+                            <!-- Title -->
+                            <h1>
+                                START BOOTSTRAP
+                            </h1>
+
+                            <div>
+                                ------- STELLA -------
+                            </div>
+
+                            <h2>
+                                GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR
+                            </h2>
+
+                        </div>
+                        
+
+                    </div>
+                </div>
+            </div>
 
         </section>
 
