Section Portfolio layout complete

--- a/index.html
+++ b/index.html
@@ -77,17 +77,16 @@
                                 START BOOTSTRAP
                             </h1>
 
-                            <div>
+                            <!-- Star -->
+                            <div class="star">
                                 ------- STELLA -------
                             </div>
 
+                            <!-- Subtitle -->
                             <h2>
                                 GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR
                             </h2>
-
                         </div>
-                        
-
                     </div>
                 </div>
             </div>
@@ -95,8 +94,56 @@
         </section>
 
         <!-- Portfolio -->
-        <section>
+        <section id="portfolio">
 
+            <div class="portfolio-title">
+
+                <!-- Title -->
+                <h2>
+                    PORTFOLIO
+                </h2>
+
+                <!-- Star -->
+                <div class="star">
+                    ------- STELLA -------
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-lg-3">
+                    <div class="col">
+                        <div class="img-container">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos nostrum qui sapiente. Deleniti, officia velit exercitationem saepe dolore iusto nihil tenetur esse. Debitis obcaecati atque quidem vel officia? Enim, a!
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-container">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos nostrum qui sapiente. Deleniti, officia velit exercitationem saepe dolore iusto nihil tenetur esse. Debitis obcaecati atque quidem vel officia? Enim, a!
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-container">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos nostrum qui sapiente. Deleniti, officia velit exercitationem saepe dolore iusto nihil tenetur esse. Debitis obcaecati atque quidem vel officia? Enim, a!
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="img-container">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos nostrum qui sapiente. Deleniti, officia velit exercitationem saepe dolore iusto nihil tenetur esse. Debitis obcaecati atque quidem vel officia? Enim, a!
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-container">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos nostrum qui sapiente. Deleniti, officia velit exercitationem saepe dolore iusto nihil tenetur esse. Debitis obcaecati atque quidem vel officia? Enim, a!
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-container">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos nostrum qui sapiente. Deleniti, officia velit exercitationem saepe dolore iusto nihil tenetur esse. Debitis obcaecati atque quidem vel officia? Enim, a!
+                        </div>
+                    </div>
+                </div>
+              </div>
         </section>
 
         <!-- About me -->
