--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <div class="row row-cols-1 row-cols-md-3">
                     <div class="col">
 
-                        <div class="tf-left">
+                        <div class="footer-col-content">
 
                             <div class>
                                 LOREM IPSUM 
@@ -256,7 +256,7 @@
 
                     <div class="col">
 
-                        <div class="tf-center">
+                        <div class="footer-col-content">
 
                             <div>
                                 LOREM IPSUM DOLOR
@@ -288,7 +288,7 @@
 
                     <div class="col">
 
-                        <div class="tf-right">
+                        <div class="footer-col-content">
                             <div>
                                 ABOUT LOREM IPSUM 
                             </div>
