--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -18,37 +21,59 @@
 
     <!-- HEADER -->
     <header>
-        <div class="container al">
+        <div class="container">
             <div class="row row-cols-2">
-              <div class="col d-flex justify-content-start">
-                <a href="#">START BOOTSTRAP</a> 
-              </div>
-              <div class="col justify-content-end">
+
+                <!-- Brand Column -->
+                <div class="col d-flex justify-content-start">
+
+                <!-- Brand -->
+                    <div class="brand">
+
+                        <a href="#">
+                            START BOOTSTRAP
+                        </a>
+                    </div>
+                 
+                </div>
+
+                <!-- Menù Column -->
+                <div class="col">
                 <nav class="d-flex justify-content-end">
                     <ul>
 
-                        <li class="menu-link d-none d-lg-block">
+                        <!-- Menù -->
+                        <li class="menu d-none d-lg-block">
 
                             <ul>
 
                                 <li>
-                                    <a href="#">LINK</a> 
+                                    <a href="#">
+                                        PORTFOLIO
+                                    </a> 
                                 </li>
 
                                 <li>
-                                    <a href="#">LINK</a>
+                                    <a href="#">
+                                        ABOUT
+                                    </a>
                                 </li>
 
                                 <li>
-                                    <a href="#">LINK</a>
+                                    <a href="#">
+                                        CONTACT
+                                    </a>
                                 </li>
 
                             </ul>
-
                         </li>
 
+                        <!-- Burger -->
                         <li class="burger d-lg-none">
-                            <a href="#">BURGER</a> 
+
+                            <a href="#">
+
+                                <i class="fa fa-bars fa-lg" aria-hidden="true"></i></a> 
                         </li>
                     </ul>
                 </nav>
