Portfolio section complete

--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
                     PORTFOLIO
                 </h2>
 
-                
                 <!-- Star Icon -->
                 <div class="star-black">
 
@@ -135,7 +134,7 @@
                 </div>
             </div>
 
-
+            <!-- Portfolio -->
             <div class="container">
                 <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-lg-3">
                     <div class="col">
@@ -150,14 +149,14 @@
                         <div class="img-container">
 
                             <!-- Image -->
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos nostrum qui sapiente. Deleniti, officia velit exercitationem saepe dolore iusto nihil tenetur esse. Debitis obcaecati atque quidem vel officia? Enim, a!
+                            <img src="img/cake.png" alt="cake">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-container">
 
                             <!-- Image -->
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos nostrum qui sapiente. Deleniti, officia velit exercitationem saepe dolore iusto nihil tenetur esse. Debitis obcaecati atque quidem vel officia? Enim, a!
+                            <img src="img/circus.png" alt="circus">
                         </div>
                     </div>
 
@@ -165,21 +164,21 @@
                         <div class="img-container">
 
                             <!-- Image -->
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos nostrum qui sapiente. Deleniti, officia velit exercitationem saepe dolore iusto nihil tenetur esse. Debitis obcaecati atque quidem vel officia? Enim, a!
+                            <img src="img/game.png" alt="game">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-container">
 
                             <!-- Image -->
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos nostrum qui sapiente. Deleniti, officia velit exercitationem saepe dolore iusto nihil tenetur esse. Debitis obcaecati atque quidem vel officia? Enim, a!
+                            <img src="img/safe.png" alt="safe">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-container">
 
                             <!-- Image -->
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos nostrum qui sapiente. Deleniti, officia velit exercitationem saepe dolore iusto nihil tenetur esse. Debitis obcaecati atque quidem vel officia? Enim, a!
+                            <img src="img/submarine.png" alt="submarine">
                         </div>
                     </div>
                 </div>
