Contact section complete

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             </div>
                         </div>
 
-                        <div class="btn-container">
+                        <div class="p-top2 btn-container">
 
                             <!-- Button -->
                             <button type="button" class="btn btn-primary">
@@ -228,18 +228,14 @@
                                 <i class="fa fa-download" aria-hidden="true"></i>
                                 Download
                             </button>
-
                         </div>
-
                     </div>
                 </div>
             </div>
-
         </section>
 
         <!-- Contact me -->
         <section>
-
             <div class="ms_container">
 
                 <!-- Section Header-->
@@ -258,12 +254,41 @@
                 </div>
     
                 <div class="container-fluid">
-                    <div class="row">
-                        <div class="col">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus blanditiis consectetur eligendi reiciendis quis tenetur quidem officia accusantium quaerat inventore aut corporis harum maxime, tempora tempore sit? Molestias, ea exercitationem.
-                            Cum nobis aspernatur voluptatem earum esse doloremque nisi sunt pariatur recusandae harum. Neque illo ab suscipit nostrum dolor dolore inventore, velit incidunt nam tempora autem consectetur dicta distinctio, rem sequi!
-                            Adipisci sit, placeat maxime sunt hic eum nulla itaque reiciendis laborum aliquid magni, cumque dolorum voluptate consequuntur! Eaque, adipisci recusandae, ad, laborum voluptate ipsam a earum consequuntur dolorum magnam totam?
-                        </div>
+
+                    <!-- Form -->
+                    <div class="form-container">
+                        <form>
+
+                            <!-- Name -->
+                            <div class>
+                                <label for="name" class="form-label"></label>
+                                <input type="text" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Name">
+                            </div>
+    
+                            <!-- E-mail Address -->
+                            <div>
+                                <label for="email address" class="form-label"></label>
+                                <input type="email" class="form-control" id="email address" aria-describedby="emailHelp" placeholder="Email Address">
+                            </div>    
+
+                            <!-- Phone numbe -->
+                            <div>
+                                <label for="phone number" class="form-label"></label>
+                                <input type="text" class="form-control" id="phone number" aria-describedby="emailHelp" placeholder="Phone Number">
+                            </div>
+
+                            <!-- Message -->
+                            <div class="form-floating">
+                                <label for="message"></label>
+                                <textarea class="form-control" placeholder="Message" id="messagge" style="height: 100px" >
+                                </textarea>
+                            </div>
+
+                            <!-- Button -->
+                            <div class="p-top2">
+                                <button type="button" class="btn btn-success">Send</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
