Details in progress

--- a/index.html
+++ b/index.html
@@ -365,8 +365,8 @@
             </div>
         </div>
         
-        <div class="bottom-footer">
-            Lorem Copyright dolor 2022
+        <div class="bottom-footer tx-white">
+            Copyright <span>&copy;</span> Your Website 2019
         </div>
 
     </Footer>
