details in progress

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                             </div>
 
                             <!-- Message -->
-                            <div class="form-floating">
+                            <div>
                                 <label for="message"></label>
                                 <textarea class="form-control" placeholder="Message" id="messagge" style="height: 100px" >
                                 </textarea>
@@ -326,7 +326,7 @@
                             
                             <!-- Socials Link -->
                             <div>
-                                <ul class="d-flex justify-content-center">
+                                <ul class="social d-flex justify-content-center">
                                     <li>
                                         <a href="#">
                                             <i class="fa-brands fa-facebook-f fa-lg"></i>
