Details in progress

--- a/index.html
+++ b/index.html
@@ -280,8 +280,7 @@
                             <!-- Message -->
                             <div>
                                 <label for="message"></label>
-                                <textarea class="form-control" placeholder="Message" id="messagge" style="height: 100px" >
-                                </textarea>
+                                <textarea class="form-control" placeholder="Message" id="messagge" style="height: 100px" ></textarea>
                             </div>
 
                             <!-- Button -->
