--- a/index.html
+++ b/index.html
@@ -215,12 +215,12 @@
                         <div class="p-top2 btn-container">
 
                             <!-- Button -->
-                            <button type="button" class="btn btn-primary">
+                            <a type="button" class="btn btn-primary">
 
                                 <!-- Donwload Icon -->
                                 <i class="fa fa-download" aria-hidden="true"></i>
                                 Download
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
