--- a/index.html
+++ b/index.html
@@ -254,19 +254,19 @@
 
                             <!-- Name -->
                             <div class>
-                                <label for="name" class="form-label"></label>
+                                <label for="name" class="form-label visually-hidden"></label>
                                 <input type="text" class="form-control" id="name" placeholder="Name">
                             </div>
     
                             <!-- E-mail Address -->
                             <div>
-                                <label for="email-address" class="form-label"></label>
+                                <label for="email-address" class="form-label visually-hidden"></label>
                                 <input type="email" class="form-control" id="email-address" placeholder="Email Address">
                             </div>    
 
                             <!-- Phone number -->
                             <div>
-                                <label for="phone-number" class="form-label"></label>
+                                <label for="phone-number" class="form-label visually-hidden"></label>
                                 <input type="text" class="form-control" id="phone-number" placeholder="Phone Number">
                             </div>
 
@@ -278,7 +278,7 @@
 
                             <!-- Button -->
                             <div class="p-top2">
-                                <button type="button" class="btn btn-success">Send</button>
+                                <a type="button" class="btn btn-success">Send</a>
                             </div>
                         </form>
                     </div>
